fixed studypage spacing

--- a/client/src/components/pages/StudyPage.css
+++ b/client/src/components/pages/StudyPage.css
@@ -9,7 +9,6 @@
   justify-content: center;
   text-align: center;
   background-image: linear-gradient(#e4e4e4, #a4def9);
-  overflow: auto;
 }
 
 .StudyPage-plantContainer {
@@ -30,12 +29,12 @@
 }
 
 .StudyPage-infoContainer {
-  width: 50%;
+  width: 60%;
   margin-left: auto;
+  margin-top: auto;
   margin-bottom: auto;
-  margin-top: 28vh;
-  margin-bottom: auto;
-  /* padding-top: 80px; */
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: flex;
   flex-direction: column;
   text-shadow: white 0px 1px 10px;
@@ -69,14 +68,14 @@
   border: 0px;
   border-radius: 24px;
   padding: 10px 20px;
-  margin: 15px auto;
-  width: 60%;
-  font-size: 24px;
+  margin: 2% auto;
+  width: 70%;
+  height: auto;
+  font-size: 3vh;
   justify-content: center;
   text-shadow: grey 0px 1px 2px;
   transition: text-shadow 0.2s;
   flex: 1;
-  animation: fadein 1s;
 }
 .StudyPage-buttonLeft {
   margin-right: 1%;
@@ -86,6 +85,24 @@
 .StudyPage-buttonRight {
   margin-left: 1%;
   width: 100%;
+}
+
+@media screen and (max-width: 672px) {
+  .StudyPage-studyButton {
+    font-size: 15px;
+    border-radius: 48px;
+  }
+  .StudyPage-timerButtonContainer {
+    flex-direction: column;
+  }
+  .StudyPage-plantTitle {
+    font-size: 28px;
+  }
+  .StudyPage-plantSubject {
+    font-size: 24px;
+    font-weight: 400;
+    color: var(--text-dark);
+  }
 }
 
 .StudyPage-studyButton:hover {
@@ -113,20 +130,20 @@
   font-size: 14vw;
   font-weight: 200;
   color: var(--text-dark);
-  animation: fadein 1s;
 }
+
 .StudyPage-formContainer {
-  margin: 15px 12.5%;
-  
+  margin: auto;
+  width: 70%;
 }
+
 .LogStudyTime-form {
   display: flex;
   flex-direction: column;
   background-color: #9bbce0;
   border-radius: 20px;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
-  margin: auto 10%;
-  /* margin; */
+  margin: auto;
   padding: 10px 5px;
   animation: fadein 1s;
   -moz-animation: fadein 1s; /* Firefox */
@@ -135,22 +152,19 @@
 }
 
 .LogStudyTime-container {
-  padding: 5px;
   margin: auto;
   font-weight: bold;
-
-  /* color: var(-white); */
-  /* text-shadow: white 0px 0 0px; */
+  padding-bottom: 5px;
 }
 
 .LogStudyTime-text {
   color: var(--white);
-  font-size: 16px;
   text-shadow: rgba(0, 0, 0, 0.16) 0px 1px 5px;
+  margin: auto;
 }
 
 .LogStudyTime-input {
-  margin: 10px 5px;
+  margin: auto;
   border-radius: 100px;
   padding: 5px 10px;
   border: 0px;
@@ -177,7 +191,7 @@
   margin: auto;
   padding: 10px 15px;
   text-align: center;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   color: var(--text-light);
   border-radius: 100px;
@@ -195,25 +209,22 @@
 
 .ProgressBar-container {
   height: 30px;
-  position: absolute;
-  width: 30%;
   background: white;
   border-radius: 20px;
-  top: 86vh;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-  align-self: center;
+  margin: auto;
+  margin-top: 4%;
   padding: 0px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.3);
-  /* width: 70%; */
+  width: 70%;
 }
 
 .ProgressBar {
   position: relative;
   height: 30px;
+  /* top: 1px; */
   background: #577494;
   border-radius: 20px;
+  margin-top: auto;
   margin-bottom: auto;
   margin-right: auto;
   box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
@@ -237,25 +248,6 @@
 .ProgressBar-goal {
   text-align: center;
   margin-top: -20px;
-  padding-bottom: 10px;
-}
-
-@media screen and (max-width: 672px) {
-  .StudyPage-studyButton {
-    font-size: 16px;
-    border-radius: 48px;
-  }
-  .StudyPage-timerButtonContainer {
-    flex-direction: column;
-  }
-  .StudyPage-plantTitle {
-    font-size: 28px;
-  }
-  .StudyPage-plantSubject {
-    font-size: 24px;
-    font-weight: 400;
-    color: var(--text-dark);
-  }
 }
 
 @keyframes fadein {
@@ -361,7 +353,6 @@ body {
 
 /*Time to animate*/
 .x1 {
-  animation: moveclouds 40s linear infinite;
   -webkit-animation: moveclouds 40s linear infinite;
   -moz-animation: moveclouds 40s linear infinite;
   -o-animation: moveclouds 40s linear infinite;
@@ -379,7 +370,6 @@ body {
 
   /*Speed will also be proportional to the size and opacity*/
   /*More the speed. Less the time in 's' = seconds*/
-  animation: moveclouds 35s linear infinite;
   -webkit-animation: moveclouds 35s linear infinite;
   -moz-animation: moveclouds 35s linear infinite;
   -o-animation: moveclouds 35s linear infinite;
@@ -393,7 +383,7 @@ body {
   -moz-transform: scale(0.8);
   transform: scale(1.6);
   opacity: 0.8; /*opacity proportional to the size*/
-  animation: moveclouds 40s linear infinite;
+
   -webkit-animation: moveclouds 40s linear infinite;
   -moz-animation: moveclouds 40s linear infinite;
   -o-animation: moveclouds 40s linear infinite;
@@ -407,7 +397,7 @@ body {
   -moz-transform: scale(0.75);
   transform: scale(1.5);
   opacity: 0.75; /*opacity proportional to the size*/
-  animation: moveclouds 35s linear infinite;
+
   -webkit-animation: moveclouds 35s linear infinite;
   -moz-animation: moveclouds 35s linear infinite;
   -o-animation: moveclouds 35s linear infinite;
@@ -421,20 +411,11 @@ body {
   -moz-transform: scale(0.8);
   transform: scale(1.6);
   opacity: 0.8; /*opacity proportional to the size*/
-  animation: moveclouds 50s linear infinite;
+
   -webkit-animation: moveclouds 50s linear infinite;
   -moz-animation: moveclouds 50s linear infinite;
   -o-animation: moveclouds 50s linear infinite;
   animation-delay: -10s;
-}
-
-@keyframes moveclouds {
-  0% {
-    margin-left: 1000px;
-  }
-  100% {
-    margin-left: -1000px;
-  }
 }
 
 @-webkit-keyframes moveclouds {
